--- a/index.html
+++ b/index.html
@@ -16,11 +16,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100..900&display=swap" rel="stylesheet">
 
+    <!-- Ionicons -->
+    <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
+
     <!-- STYLESHEET -->
     <link rel="stylesheet" href="styles/variables.css">
 </head>
 <body class="p-3">
-    <nav class="navbar navbar-expand-lg navbar-light bg-primary rounded mb-4">
+    <nav class="navbar navbar-expand-lg navbar-light bg-primary rounded mb-4 custom-navbar">
         <a class="navbar-brand text-white fs-14" href="#">DYLAN LANDMAN</a>
         <button class="navbar-toggler navbar-light" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon text-white"></span>
@@ -29,29 +32,63 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto gap-2">
             <li class="nav-item active">
-                <a class="nav-link" href="#">About Me</a>
+                <a class="nav-link" href="index.html">About Me</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Resume</a>
+                <a class="nav-link" href="resume.html">Resume</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Portfolio</a>
+                <a class="nav-link" href="portfolio.html">Portfolio</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link" href="pages/contact.html">Contact</a>
             </li>
             </ul>
         </div>
     </nav>
 
-    <div class="d-flex flex-column flex-lg-row align-items-center justify-content-between gap-x-3">
-        <div class="d-none d-lg-flex portfolio-container h-100 flex-column align-items-center">
-            <img src="images/profile.jpg" alt="Profile Picture" class="rounded-circle mb-4" style="width: 200px; height: 200px;">
-            <h1 class="text-center">Dylan Landman</h1>
-            <p class="text-center">Software Developer</p>
-            <div class="d-flex flex-row">
-                <a href="https://www.linkedin.com/in/dylan-landman-1b1b3b1b1/" target="_blank" class="mr-2"><img
-                        src="images/linkedin.png" alt="LinkedIn" style="width: 30px; height: 30px;"></a>
+    <div class="d-flex flex-column flex-lg-row gap-x-3">
+        <div class="d-none d-lg-flex portfolio-container h-100 flex-column align-items-center position-sticky top-16">
+            <div class="portfolio-container p-0 overflow-hidden mb-4">
+                <img src="images/profile.jpg" class="br-1" alt="Profile Picture" style="width: 200px; height: 200px;">
+            </div>
+            <h3 class="text-center">Dylan&nbsp;Landman</h3>
+            <div class="d-flex flex-row flex-nowrap gap-2 align-items-center justify-content-center">
+                <div class="pill-container">Software&nbsp;Developer</div>
+                <div class="pill-container">Web&nbsp;Developer</div>
+            </div>
+            <div class="divider"></div>
+
+            <div class="d-flex flex-column flex-nowrap gap-3 justify-content-start">
+                <div class="d-flex flex-row flex-nowrap align-items-center mb-3" style="width: 100%;">
+                    <div class="portfolio-container p-3 mr-2 mr-2 mr-2 d-flex align-items-center justify-content-center" style="width: 3.5rem;">
+                        <i class="icon ion-md-mail text-primary icon-md"></i>
+                    </div>
+                    <div>
+                        <p class="text-primary mb-0 small mb-2" >EMAIL</p>
+                        <p class="text-secondary mb-0 fs-14">dylanlandman@gmail.com</p>
+                    </div>
+                </div>
+
+                <div class="d-flex flex-row flex-nowrap align-items-center mb-3">
+                    <div class="portfolio-container p-3 mr-2 mr-2 mr-2 d-flex align-items-center justify-content-center" style="width: 3.5rem;">
+                        <i class="icon ion-md-call text-primary icon-md"></i>
+                    </div>
+                    <div>
+                        <p class="text-primary mb-0 small mb-2">PHONE #</p>
+                        <p class="text-secondary mb-0 fs-14">+1 (516) 514-2959</p>
+                    </div>
+                </div>
+
+                <div class="d-flex flex-row flex-nowrap align-items-center">
+                    <div class="portfolio-container p-3 mr-2 mr-2 mr-2 d-flex align-items-center justify-content-center" style="width: 3.5rem;">
+                        <i class="icon ion-md-pin text-primary icon-md"></i>
+                    </div>
+                    <div>
+                        <p class="text-primary mb-0 small mb-2">LOCATION</p>
+                        <p class="text-secondary mb-0 fs-14">Hoboken, NJ</p>
+                    </div>
+                </div>
             </div>
         </div>
         <div>
@@ -59,14 +96,46 @@
                 <h1>About Me</h1>
                 <hr class="header-underline">
                 <p class="mb-4">I believe technology has the power to <span class="text-primary">transform</span> how we live and work. I aim to build tools that <span class="text-primary">inspire productivity</span>, simplify daily life, and empower users to <span class="text-primary">reach their potential</span>. My work is driven by a vision to <span class="text-primary">merge design and functionality</span> into solutions that truly make a difference</p>
-                <a class="btn btn-primary" href="portfolio.html">View my work</a>
+                <a class="btn btn-primary btn-lg" href="portfolio.html">View my work</a>
             </div>
             <div class="portfolio-container mb-4">
                 <h1>What I'm Doing</h1>
                 <hr class="header-underline">
-                <div class="d-flex flex-row">
-                    <div>
-                        <h2>Project 1</h2>
+                <div class="d-flex flex-column">
+                    <div class="d-flex flex-column flex-lg-row flex-nowrap flex-gap mb-4">
+                        <div class="w-100 portfolio-container d-flex flex-column flex-md-row align-items-start gap-2">
+                            <i class="icon icon-lg mr-2 ion-md-code text-primary"></i>
+                            <div>
+                                <h2 class="text-primary">Software Development</h2>
+                                <p>I develop backend systems and infrastructures, ensuring apps are efficient, scalable, and built on solid foundations.</p>
+                            </div>
+                        </div>
+
+                        <div class="w-100 portfolio-container d-flex flex-column flex-md-row align-items-start gap-2">
+                            <i class="icon icon-lg mr-2 ion-md-clipboard text-primary"></i>
+                            <div>
+                                <h2 class="text-primary">UX Design</h2>
+                                <p>I design user-friendly experiences, crafting intuitive interfaces and workflows that make apps easy and enjoyable to use.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="d-flex flex-column flex-lg-row flex-nowrap flex-gap">
+                        <div class="w-100 portfolio-container d-flex flex-column flex-md-row align-items-start gap-2">
+                            <i class="icon icon-lg mr-2 ion-logo-wordpress text-primary"></i>
+                            <div>
+                                <h2 class="text-primary">WordPress Site Design</h2>
+                                <p>I create visually appealing and functional WordPress sites, tailoring designs to meet user needs and deliver engaging web experiences.</p>
+                            </div>
+                        </div>
+
+                        <div class="w-100 portfolio-container d-flex flex-column flex-md-row align-items-start gap-2">
+                            <i class="icon icon-lg mr-2 ion-ios-phone-portrait text-primary"></i>
+                            <div>
+                                <h2 class="text-primary">App Design</h2>
+                                <p>I build apps from scratch, focusing on creating, deploying, and refining tools that meet user needs and enhance functionality.</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
