fixed margins in the navbar

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
             <span class="navbar-toggler-icon text-white"></span>
         </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto gap-2">
+        <div class="collapse navbar-collapse " id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto gap-2 mb-2 mb-lg-0">
                 <li class="nav-item active">
                     <a class="nav-link" href="/">About Me</a>
                 </li>
