--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 
     <!-- ROUTES -->
     <script src="/js/router.js"></script>
+
+    <!-- Animate.css -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <body class="p-3">
     <nav class="navbar navbar-expand-lg navbar-light bg-primary rounded mb-4 custom-navbar top-16 position-sticky position-lg-static">
@@ -37,22 +40,21 @@
 
         <div class="collapse navbar-collapse " id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto gap-2 mb-2 mb-lg-0">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="/">About Me</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/resume">Resume</a>
+                    <a class="nav-link" href="/#/resume">Resume</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/portfolio">Portfolio</a>
+                    <a class="nav-link" href="/#/portfolio">Portfolio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/contact">Contact</a>
+                    <a class="nav-link" href="/#/contact">Contact</a>
                 </li>
             </ul>
         </div>
     </nav>
-
     <div id="content"></div>
 </body>
 </html>
