--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
+    <!-- Lightbox -->
+    <link rel="stylesheet" href="styles/lightbox.css">
+    <script src="js/lightbox.js" defer></script>
+
     <!-- LEXEND DECA FONT -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -33,7 +37,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <body class="p-3">
-    <nav class="navbar navbar-expand-lg navbar-light bg-primary rounded mb-4 custom-navbar top-16 position-sticky position-lg-static">
+    <nav class="navbar navbar-expand-lg navbar-light bg-primary rounded mb-4 custom-navbar top-16 position-sticky position-lg-static" style="z-index: 1000;">
         <a class="navbar-brand text-white fs-14" href="#">DYLAN LANDMAN</a>
         <button class="navbar-toggler navbar-light" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon text-white"></span>
