--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
     <!-- STYLESHEET -->
     <link rel="stylesheet" href="styles/variables.css">
+    <link rel="stylesheet" href="styles/inputs.css">
 
     <!-- JQUERY -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
