fixed name issue

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </head>
 <body class="p-3">
     <nav class="navbar navbar-expand-lg navbar-light bg-primary rounded mb-4 custom-navbar top-16 position-sticky position-lg-static" style="z-index: 1000;">
-        <a class="navbar-brand text-white fs-14" href="#">DYLAN LANDMAN</a>
+        <a class="navbar-brand text-white fs-14" href="/">DYLAN LANDMAN</a>
         <button class="navbar-toggler navbar-light" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon text-white"></span>
         </button>
