added desktop filter for projects

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
     <!-- JQUERY -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
+    <!-- PORTFOLIO JS -->
+    <script src="js/portfolio.js" defer></script>
+
     <!-- ROUTES -->
     <script src="/js/router.js"></script>
 
