--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
     <!-- ROUTES -->
     <script src="/js/router.js"></script>
 
+    <!-- EMAILJS -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+    <script src="js/emailjs.js" defer></script>
+
     <!-- Animate.css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
