--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
     <!-- Lightbox -->
-    <link rel="stylesheet" href="styles/lightbox.css">
-    <script src="js/lightbox.js" defer></script>
+    <link rel="stylesheet" href="./styles/lightbox.css">
+    <script src="./js/lightbox.js" defer></script>
 
     <!-- LEXEND DECA FONT -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,17 +28,17 @@
     <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
 
     <!-- STYLESHEET -->
-    <link rel="stylesheet" href="styles/variables.css">
-    <link rel="stylesheet" href="styles/inputs.css">
+    <link rel="stylesheet" href="/styles/variables.css">
+    <link rel="stylesheet" href="/styles/inputs.css">
 
     <!-- JQUERY -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
     <!-- PORTFOLIO JS -->
-    <script src="js/portfolio.js" defer></script>
+    <script src="./js/portfolio.js" defer></script>
 
     <!-- ROUTES -->
-    <script src="/js/router.js"></script>
+    <script src="./js/router.js"></script>
 
     <!-- EMAILJS -->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
@@ -43,10 +46,12 @@
 
     <!-- Animate.css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600i,1000,900i" rel="stylesheet">
 </head>
 <body class="p-3">
     <nav class="navbar navbar-expand-lg navbar-light bg-primary rounded mb-4 custom-navbar top-16 position-sticky position-lg-static" style="z-index: 1000;">
-        <a class="navbar-brand text-white fs-14" href="/">DYLAN LANDMAN</a>
+        <a class="navbar-brand text-white fw-bold fs-14" style="font-weight: 600; letter-spacing: 0.2em;" href="/">DYLAN LANDMAN</a>
         <button class="navbar-toggler navbar-light" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon text-white"></span>
         </button>
