--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
                     <a class="nav-link" href="/">About Me</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="/#/newsletter">Newsletter</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="/#/resume">Resume</a>
                 </li>
                 <li class="nav-item">
