--- a/index.html
+++ b/index.html
@@ -62,16 +62,16 @@
                     <a class="nav-link" href="/">About Me</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="/#/resume">My Story</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/#/portfolio">My Projects</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="/#/newsletter">Newsletter</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/#/resume">Resume</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/#/portfolio">Portfolio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/#/contact">Contact</a>
+                    <a class="nav-link" href="/#/contact">Contact Me</a>
                 </li>
             </ul>
         </div>
