--- a/index.html
+++ b/index.html
@@ -77,5 +77,6 @@
         </div>
     </nav>
     <div id="content"></div>
+    <a href="https://arikelhoffer.com" target="_blank">arikelhoffer.com</a>
 </body>
 </html>
